Fix logo being too big on log in page, fix #4585

--- a/apps/theming/css/theming.scss
+++ b/apps/theming/css/theming.scss
@@ -44,7 +44,6 @@
 /* override styles for login screen in guest.css */
 #header .logo,
 #header .logo-icon {
-	background-size: contain;
 	background-image: url(#{$image-logo});
 }
 
